@@ -1,5 +1,6 @@
 3.5.4
   * Update icon (bug 649359)
+  * Fix appearance of tweaks to no longer have a white background
 
 3.5.0
   * Work with new gnome shell dbus interface
